# REGRU_Marketplace

./: .gitignore  Cargo.toml  Dockerfile  README.md  changed_files.txt  es-gemini-ui-mobile  es-gemini-user-interface-2  es-gemini-user-interface-round3  es-gemini-user-interface-start  gemini-example-marketplace-smart-contract  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  shopping_cart_demo.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: backend.yml  deploy.yml  tauri.yml
REGRU_Marketplace_clone/existing_remote_content/Random/: Interactive plan and architecture
REGRU_Marketplace_clone/existing_remote_content/Smart Contracts/: es-gemini- erc-1155-smart-contract-example
autonomi_checkout_demo/: README.md  phase_demo_1_backend_quote.md  phase_demo_2_frontend_wallet_flow.md  phase_demo_3_confirm_endpoint.md  phase_demo_4_confirmation_watcher.md  phase_demo_5_tests.md  phase_demo_6_build_and_deploy.md
cli/: Cargo.toml  README.md
cli/input/: products.json
cli/src/: main.rs
cli_integration_plan/: phase_1_cli_build.md  phase_2_staging_devnet.md  phase_3_production_rollout.md  progress_2025-07-22.md
crates/autonomi-core/: Cargo.toml
crates/autonomi-core/src/: lib.rs  wallets.rs
crates/autonomi-core/src/access/: fs.rs
crates/autonomi-core/src/wallets/: mod.rs  serializable_wallet.rs
deployment_plan/: api_integration_fix_plan.md  phase_1_backend_refactor.md  phase_1_immersive_overlay_design.md  phase_2_frontend_adaptation.md  phase_3_local_testing_iteration.md  phase_4_droplet_preparation_manual_deploy.md  phase_5_cicd_github_actions.md  phase_6_security_hardening_best_practices.md  phase_7_full_api_conversion_feature_parity.md  phase_8_optimization_final_review.md  placeholder.txt
design_updates_plan/: phase_1_spacing_rounded_corners.md  phase_2_interactive_feedback.md  phase_3_color_scheme.md  phase_4_typography.md  phase_5_responsive_improvements.md  phase_6_polish_touches.md  phase_7_quick_wins.md
docs/: BACKEND_ORDER_FLOW.md  CLI.md  CONTRIBUTING.md  DEPLOYMENT.md  LOCAL_NETWORK.md  SECURITY.md  WALLETS.md  frontend_backend_communication.md  web_migration_summary.md
docs/animations/: neumorphic_input.md
docs/pr_feature_summaries/: pr_002_wallet_feature.md
existing_remote_content/User Interface/: es-gemini-user-interface-3
frontend_redesign_plan/: P0_Foundation.md  P1_Home_ProductGrid.md  P2_ProductDetail.md  P3_ProfilePage.md  P4_ShoppingCart.md  P5_Polish_UX.md  PROGRESS_CHECKLIST.md
mockups/: new_marketplace_design.html
plan_autonomi_checkout/: phase_2_frontend_cart_integration.md  phase_3_frontend_checkout_transaction.md  phase_4_e2e_testing_refinement.md
playwright-report/: index.html
public/: wallet-modal.html
scripts/: build-cli.ps1  build-cli.sh  start-local-autonomi.sh
src/: app.ts  index.css  main.ts  networks.ts  tokens.ts  wallet.ts  walletService.ts
src-backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.sh  compose.unit-tests.yml  env_template.txt  justfile  manage.py  pyproject.toml
src-backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src-backend/.devcontainer/autonomi/: Dockerfile
src-backend/config/: products.toml
src-backend/core/migrations/: 0001_initial.py
src-backend/core/models/: db.py
src-backend/core/test/unit/models/db/: test_product_model.py
src-backend/regru/: settings.py
src-backend/regru-api/: manage.py
src-backend/regru-api/regru/: asgi.py  configuration.py  settings.py  urls.py
src-backend/regru/core/migrations/: 0001_initial.py
src-backend/regru/core/models/: __init__.py  db.py
src-backend/regru/regru/: configuration.py  settings.py  wsgi.py
src-backend/src/: api.rs  db.rs  main.rs  models.rs  state.rs  transaction_service.rs
src-backend/test/: test_dummy.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/autonomi/: mod.rs
src-tauri/src/autonomi/access/: fs.rs  mod.rs  wallets.rs
src-tauri/src/autonomi/cart/: mod.rs
src-tauri/src/autonomi/products/: mod.rs
src-tauri/src/commands/: mod.rs  models.rs  state.rs  wallets.rs
src-tauri/src/commands/cart/: mod.rs  models.rs
src-tauri/src/commands/products/: mod.rs  models.rs
src-tauri/src/commands/wallets/: mod.rs  models.rs
src/components/: wallet-modal.html  wallets.html
test-results/wallet-Wallet-Connection-s-7be6a-r-to-connect-and-disconnect-chromium/: error-context.md
test-results/wallet-Wallet-Connection-s-cefd1-lletConnect-modal-on-mobile-chromium/: error-context.md
test_requests/: checkout.json  details.json  run_test.ps1
tests/: example.spec.ts
