[workspace]
members = [
    "crates/autonomi-core",
    "src-backend",
    "src-tauri",
    ".cargo/bin",
]

resolver = "2" # Specifies to use the version 2 feature resolver

[workspace.package]
version = "0.1.0"
authors = ["Your Name <you@example.com>"] # TODO: Update with actual author info
edition = "2021"

# Optional: Define shared dependencies for workspace members
# This helps ensure consistent versions across the workspace.
# Members can then inherit these by specifying e.g.:
# serde = { workspace = true, features = ["derive"] }
[workspace.dependencies]
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# tokio = { version = "1", features = ["full"] }
# color-eyre = "0.6"
# Add other common dependencies here 

[workspace.lints.rust]
unsafe_code = "forbid"
# ... and many more, see `rustc -W help`

[workspace.lints.clippy]
# ... and many more, see `cargo clippy -W help`
pedantic = "deny" 

[patch.crates-io]
ant-bootstrap = { git = "https://github.com/maidsafe/autonomi", tag = "ant-bootstrap-v0.2.4" }
ant-evm = { git = "https://github.com/maidsafe/autonomi", tag = "ant-evm-v0.1.15" }
ant-protocol = { git = "https://github.com/maidsafe/autonomi", tag = "ant-protocol-v1.0.6" }
ant-logging = { git = "https://github.com/maidsafe/autonomi", tag = "ant-logging-v0.2.50" }
autonomi = { git = "https://github.com/maidsafe/autonomi", tag = "autonomi-v0.4.6" }
evmlib = { git = "https://github.com/maidsafe/autonomi", tag = "evmlib-v0.4.1" } 