[workspace]
members = [
    "crates/autonomi-core",
    "src-backend",
    "src-tauri",
    ".cargo/bin",
]

resolver = "2" # Specifies to use the version 2 feature resolver

[workspace.package]
version = "0.1.0"
authors = ["Your Name <you@example.com>"] # TODO: Update with actual author info
edition = "2021"

# Optional: Define shared dependencies for workspace members
# This helps ensure consistent versions across the workspace.
# Members can then inherit these by specifying e.g.:
# serde = { workspace = true, features = ["derive"] }
[workspace.dependencies]
autonomi = { git = "https://github.com/maidsafe/autonomi", tag = "autonomi-v0.5.0" }
actix-web = "4"
actix-cors = "0.7.0"
actix-files = "0.6.5"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12.1"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
ant-bootstrap = { git = "https://github.com/maidsafe/autonomi", tag = "ant-bootstrap-v0.2.4" }
ant-evm = { git = "https://github.com/maidsafe/autonomi", tag = "ant-evm-v0.1.15" }
ant-protocol = { git = "https://github.com/maidsafe/autonomi", tag = "ant-protocol-v1.0.6" }
ant-logging = { git = "https://github.com/maidsafe/autonomi", tag = "ant-logging-v0.2.50" }
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
dirs-next = "2.0.0"

[workspace.lints.rust]
unsafe_code = "forbid"
# ... and many more, see `rustc -W help`

[workspace.lints.clippy]
# ... and many more, see `cargo clippy -W help`
pedantic = "deny" 