[package]
name = "regru"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { version = "1.2.1", features = ["serde"]}
autonomi = "0.4.6"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
comfy-table = "7.1.4"
csv = "1.3.1"
dirs-next = "2.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.17.0", features = ["serde"] }
