[package]
name = "src-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"

autonomi-core = { path = "../crates/autonomi-core" }

color-eyre = "0.6" # For consistent error reporting, optional 

[build-dependencies]

[lints]
workspace = true

[patch.crates-io]
autonomi = { git = "https://github.com/maidsafe/autonomi", tag = "autonomi-v0.4.6" }
ant-bootstrap = { git = "https://github.com/maidsafe/autonomi", tag = "ant-bootstrap-v0.2.4" }
ant-evm = { git = "https://github.com/maidsafe/autonomi", tag = "ant-evm-v0.1.15" }
ant-protocol = { git = "https://github.com/maidsafe/autonomi", tag = "ant-protocol-v1.0.6" }
evmlib = { git = "https://github.com/maidsafe/autonomi", tag = "evmlib-v0.4.1" }
ant-logging = { git = "https://github.com/maidsafe/autonomi", tag = "ant-logging-v0.2.50" }