[package]
name = "src-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
actix-files = "0.6"
actix-cors = "0.7"

autonomi-core = { path = "../crates/autonomi-core" }

color-eyre = "0.6" # For consistent error reporting, optional 

[build-dependencies]

[lints]
workspace = true