[package]
name = "src-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12.1"
autonomi-core = { path = "../crates/autonomi-core" }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.3"
log="0.4.22"
actix-files = "0.6.5"
ant-protocol = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
hex = "0.4"


[build-dependencies]

[lints]
workspace = true