[package]
name = "autonomi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
autonomi = { git = "https://github.com/maidsafe/autonomi", tag = "autonomi-v0.4.6" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"
dirs-next = "2.0.0"

[lints]
workspace = true