[package]
name = "autonomi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
autonomi = { git = "https://github.com/maidsafe/autonomi", tag = "autonomi-v0.4.6" }
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
dirs-next = "2.0.0"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.20.0"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true