[package]
name = "autonomi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
autonomi = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.20.0"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true